--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body{
     display: flex;
     height: 100px;
     width: 100px;
+    margin-bottom: 15px;
+    margin: 0 2px 25px 5px;
     border-radius: 50%;
     background-color: black;
 }
@@ -104,7 +106,14 @@ body{
     0%,100%{
     background-color: var(--blue);
     }
-    50%{
-    background-color: orange;
-    }    
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); background-color: orange; }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  /* 100% { transform: translate(1px, -2px) rotate(-1deg); } */
 }
