--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ body{
     border-radius: 50%;
     background-color: black;
 }
+h1{
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
 #pad1{
     display: flex;
     height: 100px;
