--- a/style.css
+++ b/style.css
@@ -1,124 +1,146 @@
-:root{
-    --blue: #1e90ff;
+:root {
+  --blue: #1e90ff;
 }
-body{
-    background-color: grey;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+body {
+  background-color: grey;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
-#kit{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+#kit {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-.pad{
-    display: flex;
-    height: 100px;
-    width: 100px;
-    margin-bottom: 15px;
-    margin: 0 2px 25px 5px;
-    border-radius: 50%;
-    background-color: black;
+.pad {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  margin-bottom: 15px;
+  border-radius: 50%;
+  background-color: rgb(225, 255, 0);
+  margin-left: auto;
+  margin-right: auto;
 }
-h1{
-    text-align: center;
-    padding: 0;
-    margin: 0;
+h1 {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  color: white;
 }
-#pad1{
-    display: flex;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    background-color: var(--blue);
+#pad1 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: var(--blue);
 }
-#pad1:hover{
-    background-color: orange;
+#pad1:hover {
+  background-color: orange;
 }
-#pad2{
-    display: flex;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    background-color: var(--blue);
+#pad2 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: var(--blue);
 }
-#pad2:hover{
-    background-color: orange;
+#pad2:hover {
+  background-color: orange;
 }
-#pad3{
-    display: flex;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    background-color: var(--blue);
+#pad3 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: var(--blue);
 }
-#pad3:hover{
-    background-color: orange;
+#pad3:hover {
+  background-color: orange;
 }
-#pad4{
-    display: flex;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    background-color: var(--blue);
+#pad4 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: var(--blue);
 }
-#pad4:hover{
-    background-color: orange;
+#pad4:hover {
+  background-color: orange;
 }
-#pad5{
-    display: flex;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    background-color: var(--blue);
+#pad5 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: var(--blue);
 }
-#pad5:hover{
-    background-color: orange;
+#pad5:hover {
+  background-color: orange;
 }
-#pad6{
-    display: flex;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    background-color: var(--blue);
+#pad6 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: var(--blue);
 }
-#pad7{
-    display: flex;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    background-color: var(--blue);
+#pad7 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: var(--blue);
 }
-#pad8{
-    display: flex;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    background-color: var(--blue);
+#pad8 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: var(--blue);
 }
-#pad9{
-    display: flex;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    background-color: var(--blue);
+#pad9 {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: var(--blue);
 }
 @keyframes lightUp {
-    0%,100%{
+  0%,
+  100% {
     background-color: var(--blue);
-    }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); background-color: orange; }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  /* 100% { transform: translate(1px, -2px) rotate(-1deg); } */
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px);
+  }
+  20% {
+    transform: translate(-3px, 0px);
+  }
+  30% {
+    transform: translate(3px, 2px);
+  }
+  40% {
+    transform: translate(1px, -1px);
+  }
+  50% {
+    transform: translate(-1px, 2px);
+    background-color: orange;
+  }
+  60% {
+    transform: translate(-3px, 1px);
+  }
+  70% {
+    transform: translate(3px, 1px);
+  }
+  80% {
+    transform: translate(-1px, -1px);
+  }
+  90% {
+    transform: translate(1px, 2px);
+  }
 }
